# monarch-1

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.nightly  MONARCH_INFO.md  README.md  SECURITY.md  admin_tui_refactoring_plan.md  admin_tui_tree_refactor_plan.md  build-requirements.txt  pyproject.toml  requirements.txt  rfc_admin_tui_help_pane.md  rust-toolchain  setup.py  torch-requirements.txt  what.txt  whittle
.cargo/: config.toml
.config/: nextest.toml
.github/: pytorch-probot.yml
.github/workflows/: build-cpu-macos.yml  build-cpu.yml  build-cuda.yml  build-dist.yml  build-docker.yml  build-gpu.yml  build-macos.yml  build-rocm.yml  ci-macos.yml  ci.yml  doc_build.yml  publish_release.yml  set-matrix.yaml  stale.yml  test-cpu-python-macos.yml  test-cpu-python.yml  test-cpu-rust-macos.yml  test-cpu-rust.yml  test-cpu.yml  test-cuda.yml  test-fuse-python.yml  test-gpu-python.yml  test-gpu-rust.yml  test.yml  type-check-python.yml  wheels.yml
actor_extension/: Cargo.toml
actor_extension/src/: blocking.rs  code_sync.rs  lib.rs  panic.rs
algebra/: Cargo.toml
algebra/src/: crdt.rs  join_semilattice.rs  lattice_map.rs  lib.rs  lww.rs  primitives.rs  semigroup.rs
autocargo_plugin_internal_path/monarch_messages/: build.rs
books/hyperactor-book/: README.md  book.toml
build_utils/: Cargo.toml
build_utils/src/: lib.rs  rocm.rs
ci/: poll_github_ci.py  wait_for_github_ci.sky
controller/: Cargo.toml  build.rs
controller/src/: bootstrap.rs  history.rs  lib.rs  main.rs
cuda-sys/: Cargo.toml  build.rs
cuda-sys/src/: lib.rs  wrapper.h
docs/: DOCS_INDEX.md  DOCUMENTATION_GUIDE.md  Makefile  make.bat  requirements.txt
docs/source/: actors.md  admin-tui.md  conf.py  cookbook.md  get_started.md  index.md  installation.md  monarch-dashboard.md  rdma.py  rust-api.md
erased_lifetime/: Cargo.toml
erased_lifetime/src/: lib.rs
examples/: distributed_telemetry.py  distributed_telemetry_hello_world.py  distributed_telemetry_real_data.py  grpo_actor.py  hello_gather_mount.py  rdma_pingpong.py  slurm_allreduce.ipynb  slurm_ddp.ipynb  slurm_titan.ipynb
examples/example_actors/: compute_world_size_actor.py
examples/kubernetes/: README.md  hello_kubernetes_job.py  volcano_workers.yaml
examples/notebooks/: README.md  ping_pong.ipynb  spmd_ddp.ipynb
examples/presentation/: demo.py  presentation.ipynb
examples/rdma_pingpong/: README.md  kubernetes_provision.yaml  rdma_pingpong.py
examples/remotemount/: REMOTERUN_GUIDE.md  bench_incremental.py  remoterun.py  remoterun.sh  setup_conda_env.sh
examples/skypilot/: README.md  monarch_quickstart.sky.yaml  skypilot_ddp.ipynb  skypilot_quickstart_driver.py
examples/slurm/: utils.py
examples/torchtitan_mast/: .gitignore  BENCHMARK.md  README.md  benchmark_table.csv  benchmark_table.sh  job.py  pyproject.toml  setup_env.sh  train.py  train_with_actors.py
examples/torchtitan_mast/simple_mast_job/: __init__.py  build_bootstrap.py
hyper/: Cargo.toml  hyper.dotslash.py
hyper/src/: commands.rs  lib.rs  main.rs
hyper/src/commands/: admin.rs  demo.rs  list.rs  procs.rs  resolve.rs  serve.rs  show.rs  top.rs
hyper/src/tui/: mod.rs  top.rs
hyper/src/utils/: mod.rs  system_address.rs
hyper/tests/: demo_test.py
hyperactor/: Cargo.toml
hyperactor/benches/: README.md  channel_benchmarks.rs  main.rs
hyperactor/example/: channel.rs  derive.rs  pingpong.rs  stream.rs
hyperactor/src/: accum.rs  actor.rs  actor_local.rs  addr.rs  attrs.rs  cap.rs  channel.rs  checkpoint.rs  client.rs  clock.rs  config.rs  context.rs  (+35 more)
hyperactor_cast/: Cargo.toml
hyperactor_config/: Cargo.toml
hyperactor_config_macros/: Cargo.toml
hyperactor_extension/: Cargo.toml
hyperactor_macros/: Cargo.toml  build.rs
hyperactor_mesh/: Cargo.toml
hyperactor_mesh_admin_tui/: Cargo.toml
hyperactor_mesh_macros/: Cargo.toml
hyperactor_multiprocess/: Cargo.toml
hyperactor_named/: Cargo.toml
hyperactor_remote/: Cargo.toml
hyperactor_state/: Cargo.toml
hyperactor_telemetry/: Cargo.toml
monarch_bench/: Cargo.toml
monarch_conda/: Cargo.toml
monarch_cpp_static_libs/: Cargo.toml  build.rs
monarch_dashboard/: README.md  __main__.py
monarch_distributed_telemetry/: Cargo.toml
monarch_extension/: Cargo.toml  build.rs
monarch_gil/: Cargo.toml
monarch_hyperactor/: Cargo.toml
monarch_introspection_snapshot/: Cargo.toml
monarch_messages/: Cargo.toml  build.rs  test_utils.py
monarch_meta_extension/: Cargo.toml
monarch_perfetto_trace/: Cargo.toml
monarch_rdma/: Cargo.toml  README.md  build.rs
monarch_record_batch/: Cargo.toml
monarch_record_batch_macros/: Cargo.toml
monarch_simulator/: Cargo.toml
monarch_telemetry_schema/: Cargo.toml
monarch_tensor_worker/: Cargo.toml  test_utils.py  test_worker_main.py
monarch_types/: Cargo.toml
monarch_worker/: Cargo.toml  build.rs  test_worker_main.py
nccl-sys/: Cargo.toml  build.rs
nccl-sys/src/: bridge.cpp  bridge.h  lib.rs  nccl.h  nccl_direct.h
ndslice/: Cargo.toml
preempt_rwlock/: Cargo.toml
rankspace/: Cargo.toml
rdmacore-sys/: Cargo.toml  build.rs
rdmaxcel-sys/: Cargo.toml  README.md  build.rs
rdmaxcel-sys/src/: driver_api.cpp  driver_api.h  lib.rs  rdmaxcel.c  rdmaxcel.cpp  rdmaxcel.cu  rdmaxcel.h  test_rdmaxcel.c
record_batch_derive/: Cargo.toml
scripts/: build_monarch_for_docs.sh  common-setup-macos.sh  common-setup.sh  fetch_disabled_tests.py  handle_sphinx_errors.sh  install_nightly.py  profile_compile_obligations.sh  sccache-rustc-wrapper.sh  verify_api_docs.py
serde_multipart/: Cargo.toml
struct_diff_patch/: Cargo.toml
struct_diff_patch_macros/: Cargo.toml
timed_test/: Cargo.toml
tool_fetch/: Cargo.toml
tool_fetch/specs/: py-spy.json
tool_fetch/src/: cache.rs  error.rs  extract.rs  fetch.rs  lib.rs  platform.rs  spec.rs  tests.rs
tool_fetch/tests/: provision_test.rs
tools/: cli.py  commands.py
torch-sys/: Cargo.toml  README.md  build.rs  test_utils.py
torch-sys-cuda/: Cargo.toml  build.rs
torch-sys2/: Cargo.toml
typeuri/: Cargo.toml
typeuri_macros/: Cargo.toml
wirevalue/: Cargo.toml
(+1280 files in other folders)
