[workspace]
resolver = "2"
members = [
    "build_utils",
    "erased_lifetime",
    "hyper",
    "hyperactor",
    "hyperactor_macros",
    "hyperactor_mesh",
    "hyperactor_mesh_macros",
    "hyperactor_telemetry",
    "monarch_bench",
    "monarch_conda",
    "monarch_extension",
    "monarch_hyperactor",
    "monarch_messages",
    "monarch_perfetto_trace",
    "monarch_rdma",
    "monarch_tensor_worker",
    "monarch_types",
    "monarch_cpp_static_libs",
    "nccl-sys",
    "ndslice",
    "preempt_rwlock",
    "rdmaxcel-sys",
    "serde_multipart",
    "struct_diff_patch",
    "struct_diff_patch_macros",
    "timed_test",
]
