[workspace]
resolver = "2"
members = [
    "build_utils",
    "erased_lifetime",
    "hyper",
    "hyperactor",
    "hyperactor_config",
    "hyperactor_config_macros",
    "hyperactor_macros",
    "hyperactor_mesh",
    "hyperactor_mesh_macros",
    "typeuri",
    "typeuri_macros",
    "hyperactor_telemetry",
    "monarch_bench",
    "monarch_conda",
    "monarch_cpp_static_libs",
    "monarch_distributed_telemetry",
    "monarch_extension",
    "monarch_hyperactor",
    "monarch_messages",
    "monarch_perfetto_trace",
    "monarch_rdma",
    "monarch_tensor_worker",
    "monarch_types",
    "nccl-sys",
    "ndslice",
    "preempt_rwlock",
    "record_batch_derive",
    "rdmaxcel-sys",
    "serde_multipart",
    "struct_diff_patch",
    "struct_diff_patch_macros",
    "timed_test",
    "torch-sys2",
    "torch-sys-cuda",
    "wirevalue",
]
