[package]
name = "nccl-sys"
version = "0.0.0"
authors = ["Facebook"]
edition = "2021"
license = "MIT"
links = "nccl"

[dependencies]
cxx = "1.0.119"
serde = { version = "1.0.185", features = ["derive", "rc"] }

[build-dependencies]
bindgen = "0.70.1"
build_utils = { path = "../build_utils" }
cc = "1.0"
