[package]
name = "rdmaxcel-sys"
version = "0.0.1"
authors = ["Facebook"]
edition = "2021"
license = "MIT"
links = "rdmaxcel"

[dependencies]
cxx = "1.0.119"
serde = { version = "1.0.185", features = ["derive", "rc"] }

[build-dependencies]
bindgen = "0.70.1"
cc = "1.0"
build_utils = { path = "../build_utils" }
