[package]
name = "tool_fetch"
version = "0.0.0"
authors = ["Meta"]
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
flate2 = "1.1.9"
fs2 = "0.4.3"
hex = "0.4.3"
reqwest = { version = "0.13.2", features = ["rustls", "stream"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }
tracing = "0.1.41"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tokio = { version = "1.52.1", features = ["full", "test-util"] }
